--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2021"
 [dependencies]
 
 anyhow = { workspace = true }
-thiserror = { workspace = true }
-sqlx = { workspace = true }
+thiserror.workspace = true
+sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls"] }
 axum = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+chrono = { version = "0.4.38", features = ["serde"] }
+argon2 = { version = "0.5.3", features = ["std"] }
