--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -28,3 +28,4 @@ jwt-simple = { version = "0.12", default-features = false, features = [
 ] }
 serde_json = "1.0.133"
 sqlx-db-tester = "0.5.0"
+http-body-util = "0.1.1"
