--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -29,3 +29,7 @@ jwt-simple = { version = "0.12", default-features = false, features = [
 serde_json = "1.0.133"
 sqlx-db-tester = "0.5.0"
 http-body-util = "0.1.1"
+tower = "0.5.1"
+tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
+uuid = { version = "1.11.0", features = ["v7", "serde"] }
+axum-extra = { version = "0.9.6", features = ["typed-header"] }
