--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -33,3 +33,4 @@ tower = "0.5.1"
 tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
 uuid = { version = "1.11.0", features = ["v7", "serde"] }
 axum-extra = { version = "0.9.6", features = ["typed-header"] }
+utoipa = "5.2.0"
