--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -34,3 +34,6 @@ tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
 uuid = { version = "1.11.0", features = ["v7", "serde"] }
 axum-extra = { version = "0.9.6", features = ["typed-header"] }
 utoipa = "5.2.0"
+sha1 = "0.10.6"
+hex = "0.4.3"
+mime_guess = "2.0.5"
