--- a/_typos.toml
+++ b/_typos.toml
@@ -1,4 +1,5 @@
 [default.extend-words]
 
 [files]
-extend-exclude = ["CHANGELOG.md", "./chat_server/fixtures/test.sql"]
+
+extend-exclude = ["CHANGELOG.md", "chat_server/fixtures/test.sql"]
