Refactor the code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["chat_server", "notify_server"]
+members = [ "chat_core","chat_server", "notify_server"]
 resolver = "2"
 
 [workspace.dependencies]
