--- a/chat_core/Cargo.toml
+++ b/chat_core/Cargo.toml
@@ -1,35 +1,23 @@
 [package]
 name = "chat_core"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
 thiserror.workspace = true
-sqlx = { workspace = true, features = [
-    "postgres",
-    "runtime-tokio",
-    "tls-rustls",
-] }
+sqlx = { workspace = true }
 axum = { workspace = true }
 tokio = { workspace = true }
 serde.workspace = true
 serde_yaml = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-chrono = { version = "0.4.38", features = ["serde"] }
-argon2 = { version = "0.5.3", features = ["std"] }
-jwt-simple = { version = "0.12", default-features = false, features = [
-    "pure-rust",
-] }
-serde_json = "1.0.133"
-sqlx-db-tester = "0.5.0"
-http-body-util = "0.1.1"
-tower = "0.5.1"
-tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
+chrono = { workspace = true }
+tower = { workspace = true }
+tower-http = { workspace = true }
+
+jwt-simple = { workspace = true }
 uuid = { version = "1.11.0", features = ["v7", "serde"] }
-axum-extra = { version = "0.9.6", features = ["typed-header"] }
-utoipa = "5.2.0"
-sha1 = "0.10.6"
-hex = "0.4.3"
-mime_guess = "2.0.5"
+axum-extra = { workspace = true }
+utoipa = { version = "5.2.0", features = ["axum_extras", "chrono"] }
