--- a/notify_server/Cargo.toml
+++ b/notify_server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "notify-server"
+name = "notify_server"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
@@ -15,7 +15,9 @@ serde = { workspace = true }
 serde_yaml = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-axum-extra = { version = "0.9.6", features = ["typed-header"] }
+axum-extra = { workspace = true }
 futures = "0.3.31"
-tokio-stream = "0.1.16"
-chat_core = { path = "../chat_core" }
+tokio-stream = { version = "0.1.16", features = ["sync"] }
+chat_core = { workspace = true }
+jwt-simple = { workspace = true }
+dashmap = { version = "6.1.0", features = ["serde"] }
