--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,11 @@ tracing-subscriber = "0.3.19"
 axum-extra = { version = "0.9.6", features = ["typed-header"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 tower = "0.5.1"
-tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
+tower-http = { version = "0.6.2", features = [
+    "compression-full",
+    "trace",
+    "cors",
+] }
 jwt-simple = { version = "0.12", default-features = false, features = [
     "pure-rust",
 ] }
