--- a/notify_server/Cargo.toml
+++ b/notify_server/Cargo.toml
@@ -21,3 +21,4 @@ tokio-stream = { version = "0.1.16", features = ["sync"] }
 chat_core = { workspace = true }
 jwt-simple = { workspace = true }
 dashmap = { version = "6.1.0", features = ["serde"] }
+tower-http = { workspace = true }
