--- a/notify_server/Cargo.toml
+++ b/notify_server/Cargo.toml
@@ -22,3 +22,4 @@ chat_core = { workspace = true }
 jwt-simple = { workspace = true }
 dashmap = { version = "6.1.0", features = ["serde"] }
 tower-http = { workspace = true }
+pin-project = "1.1.7"
