--- a/notify_server/Cargo.toml
+++ b/notify_server/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = { workspace = true }
 thiserror = { workspace = true }
 sqlx = { workspace = true }
 axum = { workspace = true }
-tokio = { workspace = true }
+tokio = { workspace = true, features = ["time"] }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 tracing = { workspace = true }
